--- a/css/common.css
+++ b/css/common.css
@@ -374,6 +374,8 @@ nav[aria-label="Page navigation"]{
 }
 .pagination {
     font-family: var(--font-2);
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 .page-item:not(:first-child) .page-link {margin-left: 0px;}
@@ -382,6 +384,12 @@ nav[aria-label="Page navigation"]{
     font-size: 1em;
     border: none;
     border-radius: 2px;
+    padding: 0px;
+    width: 1.6em;
+    height: 1.6em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .page-link:hover, .page-link:focus {
     background-color: var(--accent-lightest);
@@ -393,6 +401,9 @@ nav[aria-label="Page navigation"]{
 }
 @media (max-width: 1399px){
     nav[aria-label="Page navigation"]{margin: 0;}
+}
+@media (max-width: 767px){
+    nav[aria-label="Page navigation"]{margin: 0 auto;}
 }
 
 
