--- a/css/common.css
+++ b/css/common.css
@@ -101,12 +101,12 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
 
-input, textarea, select {
+input, textarea {
     border: 1px solid #E0E0E0;
     background: #fff;
     border-radius: 5px;
-    padding: .75em 1.5em;
-    line-height: normal;
+    padding: .3em .6em;
+    line-height: 1.2em;
     box-shadow: unset;
 }
 input:not(:placeholder-shown), textarea:not(:placeholder-shown) {
@@ -127,6 +127,13 @@ input.mini {
     border-radius: 2px;
     text-align: center;
 }
+@media (max-width: 1399px) {
+    input, textarea {padding: .5em .6em;}
+}
+@media (max-width: 767px) {
+    input, textarea {padding: .6em .6em;}
+}
+
 input[type="checkbox"]{
     -webkit-appearance:none;
     -moz-appearance:none;
@@ -136,13 +143,31 @@ input[type="checkbox"]{
     height: 1em;
     padding: 0px;
     border-radius: 2px;
-    
 }
 input[type="checkbox"]:checked {
     background-image: url(../img/icons/mark.svg);
     background-repeat: no-repeat;
     background-size: 90%;
     background-position: center;
+}
+
+input[type="search"] {
+    background: url(../img/icons/search.svg) no-repeat;
+    background-position: .5em 50%;
+    background-size: 1em 1em;
+    padding-left: 2em;
+}
+
+select {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    appearance:none;
+    border: none;
+    background: url(../img/icons/caret-down-mini.svg) no-repeat;
+    background-position: calc(100% - .5em) 50%;
+    background-size: .6em;
+    padding-right: 1.5em;
 }
 
 /* кнопки */
