--- a/css/style.css
+++ b/css/style.css
@@ -439,7 +439,7 @@ header .logo {
     filter: grayscale(1);
     transition: .3s;
 }
-.product:hover>img {filter: grayscale(0);}
+.product:hover>img.photo {filter: grayscale(0);}
 .product .text {
     color: var(--light-gray);
     font-size: .7em;
@@ -512,7 +512,7 @@ header .logo {
     background-color: var(--accent-dark);
 }
 @media (max-width: 1659px) {
-    .product img {height: 220px;}
+    .product img.photo {height: 220px;}
 }
 @media (max-width: 1399px) {
     .product .text {font-size: .8em;}
@@ -521,10 +521,10 @@ header .logo {
 @media (max-width: 767px) {
     .product-menu .swiper-wrapper {flex-direction: row;}
     .product-menu a, .product-menu button {color: var(--light-gray);}
-    .product img {filter: grayscale(0);}
+    .product img.photo {filter: grayscale(0);}
 }
 @media (max-width: 575px) {
-    .product img {height: 45vw;}
+    .product img.photo {height: 45vw;}
 }
 
 
@@ -814,7 +814,6 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
 .btn-filter svg path {fill: #C4C4C4;}
 .btn-filter.active svg path {fill: var(--accent);}
 
-
 @media (max-width: 767px){
     .catalog-menu {display: block;}
     .catalog-menu .catalog-submenu {
@@ -840,13 +839,17 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
 
 
 /* section 14 */
-.swiper-thumbs {
-    height: 310px;
-}
+.swiper-thumbs {height: 322px;}
 .swiper-thumbs img {
     width: 100%;
     height: 90px;
     object-fit: contain;
+}
+.swiper-slide {
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+.swiper-slide-thumb-active {
     border: 2px solid #F2F2F2;
     border-radius: 5px;
 }
@@ -878,9 +881,24 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
     line-height: 1.4em;
     height: 2.8em;
     overflow: hidden;
+    transition: all .2s ease;
 }
 #sec-14 .text p {
     line-height: 1.4em;
+}
+@media (max-width: 1399px){
+    .swiper-img img {height: 320px;}
+    .swiper-thumbs {height: 272px;}
+    .swiper-thumbs img {height: 80px;}
+}
+@media (max-width: 1199px){
+    .swiper-thumbs img {height: 60px;}
+    .swiper-thumbs {height: 212px;}
+}
+@media (max-width: 991px){
+    .swiper-img img {height: 250px;}
+    .swiper-thumbs img {height: 50px;}
+    .swiper-thumbs {height: 182px;}
 }
 
 
