--- a/css/common.css
+++ b/css/common.css
@@ -165,7 +165,7 @@ input[type="radio"]{
 input[type="radio"]:checked {
     background-image: url(../img/icons/radio.svg);
     background-repeat: no-repeat;
-    background-size: 55%;
+    background-size: .5em;
     background-position: center;
 }
 .radio-text {position: relative;}
@@ -194,6 +194,9 @@ input[type="radio"]:checked {
     background: unset;
     border: 2px solid var(--accent);
 }
+
+/* .radio-div {position: relative;}
+.radio-div div */
 
 input[type="search"] {
     background: url(../img/icons/search.svg) no-repeat;
@@ -576,3 +579,116 @@ nav[aria-label="Page navigation"]{
 }
 .table.table-borderless>tbody {border-top: none;}
 .table.table-borderless tr {border-bottom: none;}
+
+/********************
+Online booking
+********************/
+#booking-form {
+    min-height: 800px;
+    position: relative;
+}
+#booking-form .page {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+}
+#booking-form .page.active {
+    z-index: 10;
+    opacity: 1;
+}
+#booking-form .title {
+    font-size: 1.8em;
+    text-align: center;
+    margin-bottom: 1em;
+}
+#booking-form .line {
+    font-size: 1.4em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid var(--accent);
+    padding: 1.5em 0;
+}
+#booking-form .line:last-child {border-bottom:none;}
+#booking-form .line .left, #booking-form .line .right {
+    display: flex;
+    align-items: center;
+}
+output:empty + button {opacity: 0;}
+
+
+/* modal offcanvas */
+.btn-close {
+    position: absolute;
+    top: 1.5em;
+    right: 1.5em;
+    background: unset;
+    opacity: 1;
+    padding: 0px;
+    width: 1.5em;
+    height: 1.5em;
+    z-index: 10;
+}
+.btn-close:hover, .btn-close:focus, .btn-close:active {opacity: 1;}
+.btn-close svg {
+    width: 1.5em;
+    height: 1.5em;
+    fill: none;
+}
+.btn-close svg path {
+    stroke: var(--accent);
+    stroke-width: 3px;
+    stroke-linecap:square;
+    stroke-linejoin:round;
+}
+.btn-close:hover svg path, .btn-close:focus svg path {stroke: var(--accent-light);}
+.btn-close:active svg path {stroke: var(--accent-lightest);}
+
+.offcanvas-body {
+    background-color: #3D3D3D;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5em 3em;
+}
+.offcanvas .main-menu ul {
+    flex-direction: column;
+    align-items: flex-start;
+}
+.offcanvas .main-menu li {
+    margin-left: 0px;
+    margin-bottom: 2em;
+}
+.offcanvas .main-menu a {font-weight: 400;}
+
+/* modal */
+.modal-content {
+    background-color: var(--dark-gray);
+    border-radius: 0px;
+    color: #fff;
+    padding: 1em;
+}
+.modal-content .btn-close {
+    top: 1em;
+}
+
+@media (max-width: 767px) {
+    .offcanvas {
+        top: 65px;
+        bottom: 50px;
+        height: calc(100% - 115px);
+    }
+}
+@media (max-width: 575px) {
+    .offcanvas {width: 100%;}
+    .offcanvas .main-menu ul {align-items: center;}
+    .offcanvas .main-menu a {font-size: 1em;}
+    .btn-close {
+        top: 1em;
+        right: 1em;
+    }
+}
