--- a/css/common.css
+++ b/css/common.css
@@ -240,6 +240,20 @@ select {
     background-size: .6em;
     padding-right: 1.5em;
 }
+select.inp-style {
+    border: 1px solid #E0E0E0;
+    background: url(../img/icons/caret-down-2.svg) no-repeat transparent;
+    background-position: calc(100% - .5em) 50%;
+    background-size: 1em;
+    border-radius: 5px;
+    padding: .4em .6em;
+}
+@media (max-width: 1399px){
+    select.inp-style {padding: .5em .6em;}
+}
+@media (max-width: 767px){
+    select.inp-style {padding: .6em .6em;}
+}
 
 .input-file-hidden {
     position: relative;
@@ -703,6 +717,12 @@ MODAL
         bottom: 50px;
         height: calc(100% - 115px);
     }
+    .modal-dialog {
+        top: 65px;
+        height: calc(100% - 115px);
+        margin: 0px auto;
+    }
+    .modal-content {height: 100%;}
 }
 @media (max-width: 575px) {
     .offcanvas {width: 100%;}
@@ -809,13 +829,9 @@ output:empty + button {opacity: 0;}
     #booking-form .f_14 {font-size: 1.2em;}
     #booking-form input[type="datetime-local"]{width: 160px;}
 }
-@media (max-width: 767px){
-    #booking .modal-dialog {
-        top: 65px;
-        height: calc(100% - 115px);
-        margin: 0px auto;
-    }
-}
+/* @media (max-width: 767px){
+    
+} */
 @media (max-width: 575px){
     #booking-form .title {font-size: 1.4em;}
     #booking-form input[type="datetime-local"] {width: 130px;}
