--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,7 @@ header .logo {
     transition: .3s;
 }
 .employee-preview.active img {filter: grayscale(0);}
+
 .rating {
     display: flex;
     justify-content: flex-start;
@@ -344,6 +345,56 @@ header .logo {
     stroke: var(--accent);
     fill: var(--accent);
 }
+
+/*sprite with stars*/
+#rating input:checked ~ label, 
+#rating label, 
+#rating label:hover, 
+#rating label:hover ~ label {
+    background: url('../img/icons/stars_sprite.png') no-repeat;
+    background-size: 100% auto;
+}
+#rating {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+#rating input {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+    width: 1.5em;
+    height: 1.5em;
+    position: absolute;
+    top: 0;
+    z-index: 0;
+}
+#rating input:checked ~ label {
+    background-position: 0 -1.5em;
+    height: 1.5em;
+    width: 1.5em;
+}
+#rating label {
+    background-position: 0 0;
+    height: 1.5em;
+    width: 1.5em;
+    cursor: pointer;
+    margin-right: .5em;
+    position: relative;
+    z-index: 1;
+}
+#rating label:hover, #rating label:hover ~ label {
+    background-position: 0 -1.5em;
+    height: 1.5em;
+    width: 1.5em;
+}
+#rating #star-1 {left: 0px;}
+#rating #star-2 {left: 2em;}
+#rating #star-3 {left: 4em;}
+#rating #star-4 {left: 6em;}
+#rating #star-5 {left: 8em;}
+
 @media (max-width: 1659px) {
     .employee img {height: 250px;}
     .employee-preview img {height: 160px;}
